"Updated index.html, App.jsx, Home.jsx, Nav.jsx, and index.css files with changes to favicon link, component imports, and CSS styles."

--- a/CUG-client/src/index.css
+++ b/CUG-client/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&display=swap');
+
+
+:root
+{
+    --gradient:linear-gradient(to right, #ffff 0%, #c6ddf1 100%);
+}
