--- a/CUG-client/src/index.css
+++ b/CUG-client/src/index.css
@@ -9,6 +9,8 @@
 {
     --gradient:linear-gradient(to right, #ffff 0%, #c6ddf1 100%);
     --font-noto: "Noto Sans";
+    /* --admin-gradient: linear-gradient(90deg, #C77DFF, #9D4EDD, #7B2CBF, #3C096C);
+} */
 }
 
 body{
