"Updated Admin.jsx to use NavLink instead of Link, added activeClassName to NavLinks, and imported index.css. Modified button styles in index.css."

--- a/CUG-client/src/index.css
+++ b/CUG-client/src/index.css
@@ -13,9 +13,11 @@
 } */
 }
 
-.bg-active {
-	background-color: blue;
+.active button {
+	background-color: #3730a3;
   }
-
-
+  
+  .active button:hover {
+	background-color: #6c5ce7;
+  }
   
