"Updated Add_new_cug component with new functionality, refactored Dealer component, and added styles for active navigation links."

--- a/CUG-client/src/index.css
+++ b/CUG-client/src/index.css
@@ -21,3 +21,12 @@
 	background-color: #6c5ce7;
   }
   
+  .current  
+  {
+	background-color:#9333ea ;
+  }
+
+  .current button:hover
+  {
+	background-color:  #3b0764;
+  }
