--- a/CUG-client/src/index.css
+++ b/CUG-client/src/index.css
@@ -12,6 +12,11 @@
     /* --admin-gradient: linear-gradient(90deg, #C77DFF, #9D4EDD, #7B2CBF, #3C096C);
 } */
 }
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 
 .active button {
 	background-color: #3730a3;
